--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.10.0",
     "@expo/vector-icons": "^14.0.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.2.10",
     "expo": "~52.0.46",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
