--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "expo-web-browser": "~14.0.2",
     "graphql": "^16.11.0",
     "graphql-request": "^7.1.2",
+    "marked": "^15.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
