--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,14 @@
     "strict": true,
     "esModuleInterop": true,
     "paths": {
-      "@/*": ["./*"
-    ]
+      "@/*": ["./*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "app/components/MyCourse"
+  ]
 }
